<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">rock63.ru</string>
    <string name="refresh_news_button_text">Refresh</string>
    <string name="title_activity_news_detail">News Detail</string>
    <string name="title_activity_event_detail">Event Detail</string>

    <string name="tab_name_news">News</string>
    <string name="tab_name_events">Events</string>
    <string name="tab_name_radio">Radio</string>
    <string name="event_show_info_button_title">Show Info</string>
    <string name="event_hide_info_button_title">Hide Info</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="settings_theme_dark">Dark Theme</string>
    <string name="settings_theme_light">Light Theme</string>
    <string name="settings_restart_alert">Theme change settings will be applied after app restart</string>
    <string name="info_title">Info</string>
    <string name="settings_title">Settings</string>
    <string name="settings_event_reminder_section_title">Event remind notification</string>
    <string name="settings_weekly_reminder_title">One week before</string>
    <string name="settings_daily_reminder_title">One day before</string>

    <string name="menu_share">Share</string>

    <string name="menu_news">News</string>
    <string name="menu_events">Events</string>
    <string name="menu_radio">Radio</string>
    <string name="menu_radio_vz">VZRadio</string>
    <string name="menu_info">Settings</string>

    <string name="about_body">rock63 - application</string>
    <string name="news_no_item_text">No news</string>
    <string name="events_no_item_text">No events</string>
    <string name="events_no_place_text">Unknown place</string>

    <string name="notification_title">@string/app_name</string>
    <string name="notification_text">Radio «VZRadio!»</string>

    <string name="share_radio_title">Radio</string>
    <string name="share_radio_body">I\'m listening to %s on «VZRadio!». http://vzradio.ru</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="error_no_internet">No internet</string>

    <string name="placeholder">None</string>

    <string name="notification_weekly">Week before "%1$s"</string>
    <string name="notification_dayly">Day before "%1$s"</string>
    <string name="notification_today">Today "%1$s"</string>

</resources>